--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "google-genai>=1.21.1",
     "marimo>=0.13.11",
     "pandas>=2.2.3",
+    "plotly>=6.1.2",
 ]
