move data.csv to _site on build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
         with:
           path: _site
 
+      - name: Move data to _site
+        run: |
+          cp data.csv _site/data.csv
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
