--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "marimo>=0.13.11",
+    "nbformat>=5.10.4",
     "pandas>=2.2.3",
     "plotly>=6.1.2",
     "python-lsp-server>=1.12.2",
